@@ -641,8 +641,9 @@ for border removal).</p>
     <tr>
       <td>Oxygene:
       <a href="http://pouet.net/prod.php?which=1251">ST-NICCC 2000 Demo</a></td>
-      <td>1.6</td>
-      <td>Requires at least Hatari 1.6 for correct FDC emulation</td>
+      <td>1.7</td>
+      <td>Due to a bug in the FDC's emulation, the demo ran slower than expected
+	with Hatari &lt; 1.7</td>
     </tr>
     <tr>
       <td>Paulo Simoes (ljkb):
